--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,7 +19,7 @@ jobs:
           node-version: 16
       - run: npm install
       #- run: npm test
-
+    
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
+        # is prepare required if build executed?
       - run: npm prepare
       - run: npm publish
         env:
