--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: 16
       - run: npm install
       #- run: npm test
+      # todo: add tests?
     
   publish-npm:
     needs: build
