more work on getting the build pipeline up.

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A solidity smart-contract toolkit.",
   "main": "index.js",
   "scripts": {
-    "prepare": "cd ..; bash scripts/prepare-contracts-package.sh",
-    "prepare-docs": "cd ..; npm run prepare-docs"
+    "clean": "",
+    "prepack": "",
+    "prepare": "bash scripts/prepare-contracts-package.sh"
   },
   "repository": {
     "type": "git",
