--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
         # is prepare required if build executed?
-      - run: npm prepare
+#      - run: npm prepare
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_AUTOMATION}}
