--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@bsfoundry/contracts",
   "version": "0.0.2",
   "description": "A solidity smart-contract toolkit.",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "main": "index.js",
   "scripts": {
   },
